Functional Password Edit
Co-authored-by: Rokuro <Rookuro@users.noreply.github.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,21 @@
 {
-    // Utilisez IntelliSense pour en savoir plus sur les attributs possibles.
-    // Pointez pour afficher la description des attributs existants.
-    // Pour plus d'informations, visitez : https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "C#: PassBob Debug",
-            "type": "dotnet",
-            "request": "launch",
-            "projectPath": "${workspaceFolder}/PassBob.csproj"
-        },
-    ]
+	// Utilisez IntelliSense pour en savoir plus sur les attributs possibles.
+	// Pointez pour afficher la description des attributs existants.
+	// Pour plus d'informations, visitez : https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"name": ".NET Meteor Profiler",
+			"type": "dotnet-meteor.debugger",
+			"request": "launch",
+			"profilerMode": "gcdump",
+			"preLaunchTask": "dotnet-meteor: Build"
+		},
+		{
+			"name": "C#: PassBob Debug",
+			"type": "dotnet",
+			"request": "launch",
+			"projectPath": "${workspaceFolder}/PassBob.csproj"
+		},
+	]
 }
