--- a/PassBob.csproj
+++ b/PassBob.csproj
@@ -69,6 +69,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
         <PackageReference Include="SQLite-net-pcl" Version="1.9.172" />
+				<PackageReference Include="DotNetMeteor.HotReload.Plugin" Version="3.*"/>
     </ItemGroup>
 
 </Project>
