--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,17 +5,16 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"name": ".NET MAUI",
+			"type": "maui",
+			"request": "launch",
+			"preLaunchTask": "maui: Build"
+		},
+		{
 			"name": ".NET Meteor Profiler",
 			"type": "dotnet-meteor.debugger",
 			"request": "launch",
-			"profilerMode": "gcdump",
 			"preLaunchTask": "dotnet-meteor: Build"
-		},
-		{
-			"name": "C#: PassBob Debug",
-			"type": "dotnet",
-			"request": "launch",
-			"projectPath": "${workspaceFolder}/PassBob.csproj"
 		},
 	]
 }
