--- a/Platforms/MacCatalyst/Entitlements.plist
+++ b/Platforms/MacCatalyst/Entitlements.plist
@@ -6,9 +6,13 @@
         <!-- App Sandbox must be enabled to distribute a MacCatalyst app through the Mac App Store. -->
         <key>com.apple.security.app-sandbox</key>
         <true/>
+
         <!-- When App Sandbox is enabled, this value is required to open outgoing network connections. -->
         <key>com.apple.security.network.client</key>
         <true/>
+
+		<key>com.apple.security.keychain</key>
+		<true/>
     </dict>
 </plist>
 
